--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,21 @@ dependencies:
   csc_picker: ^0.2.7
   location: ^5.0.3
   shared_preferences: ^2.2.1
+  flutter_pw_validator: ^1.6.0
+  firebase_messaging: ^14.6.7
+  flutter_local_notifications: ^15.1.1
 
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/Lecle.png"
+
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -91,10 +101,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   # assets:
   assets:
+    - assets/
     - assets/Images/
     - assets/Images/Icons/
     - assets/Images/Images/
     - assets/Images/Images/Boarding/
+    - shorebird.yaml
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
